deploy/kubernetes/web/yangfan-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yangfan-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demo.yangfan.gd.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yangfan-web
                port:
                  number: 30880
